# personal_website

./: .gitignore  config.toml  go.mod  go.sum  index.html  mise.toml  package-lock.json  package.hugo.json  package.json  robots.txt  service-worker.min.js  sitemap.xml  sw.js
.build/: purgecss.json
.forestry/: settings.yml
.github/workflows/: gh-pages.yml  pages.yaml
ar/: 404.html  index.html  index.json  index.xml  manifest.json  manifest.webmanifest  rss.xml  search.json  sitemap.xml
ar/about/: index.html
ar/about-me/: index.html
ar/about-us/: index.html
archetypes/: default.md
assets/: jsconfig.json
css/: hb.62dc00c8eee59327c5df2e55aff3b8bcc6d1a104b5a169bb8878ba9913c2a9c7.css  hb.css.map  hb.rtl.4ff0f8e451937b4d311f5ac2dd7ece273c3029ebf11d54320e577bdc855e9398.css  hb.rtl.css.map  katex.css  search.rtl.5b6d71a2c268f7e73733d975866b3a6fe5d834016a29c3fd77aa7d7182782d11.css
en/: 404.html  index.html  index.json  index.xml  manifest.json  manifest.webmanifest  rss.xml  search.json  sitemap.xml
i18n/: ar.toml  en.toml
js/: hb.7d16b1af3f5d2993ef6dc7c7a6070991c81f349e7490a133851d8e919f2aa926.js  header-init.1df2506633803a9da2fcf2bbd5625453e72bbe854451eb117714a632b0959585.js  init.5bea44a6e081608df4013dd2a4a0776d66fca0bfae3d9d179584b0775f957e78.js  katex.js  preferred-lang.js  search.4b798d3260d406b4af2bce0b783198fec4c5cf82c80a4d3d1113ab970a3f0e67.js  search.8121b6e7ff291a8929cb724c5354330b0e1be9981e0948539c4ffbbf230b0383.js
layouts/: alias.html
scripts/: last_run  migrate_post_thumbnails_to_v0.70.py  notion_importer.py  pyproject.toml
(+1717 files in other folders)
